<resources>
    <string name="app_name">Exam Preparation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="new_user">New User?</string>

    <string name="sign_up">Sign Up</string>
    <string name="user_full_name">Full Name</string>


    <!-- Home Page -->
    <string name="hello_there">Hello there!</string>
    <string name="discover_out_furniture">Discover our Furniture Range</string>
    <string name="new_arrivals">New Arrivals</string>
    <!-- Content Description-->
    <string name="image_header_content_description">image_header</string>
    <string name="background">background image</string>
</resources>
