<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/UiPageStyle.Default"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.login.RegistrationFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_sign_up"
        style="@style/UiTextViewStyle.Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_6"
        android:text="@string/sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_lyt_email"
        style="@style/UiTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:hint="@string/email"
        app:endIconDrawable="@drawable/baseline_email_black_18dp"
        app:layout_constraintTop_toBottomOf="@id/text_view_sign_up">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit_txt_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_lyt_user_name"
        style="@style/UiTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:hint="@string/user_full_name"
        app:endIconDrawable="@drawable/baseline_person_black_18dp"
        app:layout_constraintTop_toBottomOf="@id/text_input_lyt_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit_txt_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_lyt_password"
        style="@style/UiTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:hint="@string/password"
        app:endIconDrawable="@drawable/baseline_lock_black_18dp"
        app:layout_constraintTop_toBottomOf="@id/text_input_lyt_user_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit_txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_sign_up"
        style="@style/UiButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_5"
        android:text="@string/sign_up"
        app:layout_constraintTop_toBottomOf="@id/text_input_lyt_password" />

</androidx.constraintlayout.widget.ConstraintLayout>
